house keeping and new functions to catch the AreaProximity issue in the routes.